--- a/simple-counter/package.json
+++ b/simple-counter/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.3.0-alpha.2",
     "react-dom": "^16.3.0-alpha.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "styled-components": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
